Fix archives spacing

--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ p>a, p>a:link {
 .archiveInfo {
   float: right;
   text-align: right;
-  width: 150px;
+  width: 110px;
 }
 .continue {
   font-size: 18px;
